--- a/Task1/app/src/main/res/layout/activity_main.xml
+++ b/Task1/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textViewReceive"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/logo"
@@ -17,13 +17,13 @@
         android:gravity="center_horizontal"
         android:textStyle="bold|italic"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/userIdReceive"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/userIdReceive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -31,13 +31,13 @@
             android:text="@string/user"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+            app:layout_constraintBottom_toTopOf="@+id/idReceive"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewReceive" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/idReceive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -45,13 +45,13 @@
             android:text="@string/id"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
+            app:layout_constraintBottom_toTopOf="@+id/titleReceive"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+            app:layout_constraintTop_toBottomOf="@+id/userIdReceive" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/titleReceive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -59,13 +59,13 @@
             android:text="@string/title"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/switch1"
+            app:layout_constraintBottom_toTopOf="@+id/completedReceive"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+            app:layout_constraintTop_toBottomOf="@+id/idReceive" />
 
         <Switch
-            android:id="@+id/switch1"
+            android:id="@+id/completedReceive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Completed"
@@ -75,24 +75,24 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
+            app:layout_constraintTop_toBottomOf="@+id/titleReceive"
             />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/textColor2"
+        android:backgroundTint="@color/textColor"
         android:lineSpacingExtra="0sp"
         android:onClick="infoRequest"
-        android:text="@string/logo2"
+        android:text="@string/logoData"
         android:textSize="20sp"
         android:textStyle="bold|italic"
         android:typeface="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1"
+        app:layout_constraintTop_toBottomOf="@+id/completedReceive"
         />
 
 
